# steelsnakes

./: .coveragerc  .gitignore  .readthedocs.yaml  =1.17.0  CODE_OF_CONDUCT.md  LICENSE.md  README.md  TODO.md  mkdocs.yaml  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: python-app.yml
docs/: api.md  changelog.md  index.md  requirements.txt
docs/01-guides/: 01-first-steps.md  03-codesandstds.md  index.md
docs/01-overview/: what-is-steelsnakes.md
docs/02-getting-started/: basic-usage.md  installation.md  quickstart.md
docs/03-user-guide/: database.md  materials.md  search.md
docs/04-examples/: advanced.md  basic.md  codesandstds.md  design.md  dimsandprops.md
docs/05-api-reference/: index.md
docs/05-api-reference/core/: base.md  database.md  factory.md
docs/05-api-reference/regional/AU/: index.md
docs/05-api-reference/regional/EU/: index.md
docs/05-api-reference/regional/IS/: index.md
docs/05-api-reference/regional/UK/: index.md
docs/05-api-reference/regional/UK/angles/: index.md
docs/05-api-reference/regional/UK/channels/: index.md
docs/05-api-reference/regional/UK/connections/: index.md
docs/05-api-reference/regional/UK/hollow/: index.md
docs/05-api-reference/regional/UK/universal/: index.md
docs/05-api-reference/regional/US/: index.md
docs/contributing/: development.md  guidelines.md
docs/examples/: SECTIONS.md  advanced.md  basic.md  design.md
docs/getting-started/: basic-usage.md  installation.md  quickstart.md
docs/reference/: EU.md  UK.md  base.md  core.md  database.md  factory.md  index.md  sections.md
docs/reference/core/: base.md  database.md  factory.md
docs/reference/regional/AU/: index.md
docs/reference/regional/EU/: index.md
docs/reference/regional/IS/: index.md
docs/reference/regional/UK/: index.md
docs/reference/regional/UK/angles/: index.md
docs/reference/regional/UK/channels/: index.md
docs/reference/regional/UK/connections/: index.md
docs/reference/regional/UK/hollow/: index.md
docs/reference/regional/UK/universal/: index.md
docs/reference/regional/US/: index.md
docs/stylesheets/: extra.css
docs/user-guide/: database.md  factory.md  search.md  section-types.md  sections.md
src/steelsnakes/: __init__.py  cli.py  main.py
src/steelsnakes/AU/: __init__.py  sections.py
src/steelsnakes/AU/checks/: uls.py
src/steelsnakes/AU/data/: PFC.json  UB.json
src/steelsnakes/EU/: ANALYSIS.md  MEMBERS.md  __init__.py  angles.py  beams.py  channels.py  columns.py  database.py  factory.py  flats.py  piles.py
src/steelsnakes/EU/data/: HD.json  HE.json  HL.json  HLZ.json  HL_HLZ.json  HP.json  IPE.json  L_EQUAL.json  L_EQUAL_B2B.json  L_UNEQUAL.json  L_UNEQUAL_B2B.json  PFC.json  SECTIONS.md  Sigma.json  UB.json  UBP.json  UC.json  UPE.json  UPN.json  Zed.json
src/steelsnakes/IN/: __init__.py  angles.py  beams.py  bearing_piles.py  channels.py  columns.py  tees.py
src/steelsnakes/IN/checks/: Tables.md  __init__.py
src/steelsnakes/IN/data/: .gitignore
src/steelsnakes/IS/: __init__.py  beams.py
src/steelsnakes/NZ/data/: EA.json  TFB.json
src/steelsnakes/UK/: UK_sections.sqlite3  __init__.py  angles.py  cf_hollow.py  channels.py  database.py  factory.py  hf_hollow.py  preloaded_bolts.py  universal.py  welds.py
src/steelsnakes/UK/analysis/: __init__.py
src/steelsnakes/UK/checks/: classification.py  stability.py  uls.py
src/steelsnakes/UK/data/: BOLT_PRE_88.json  CFCHS.json  CFRHS.json  CFSHS.json  HFCHS.json  HFEHS.json  HFRHS.json  HFSHS.json  JSONs.py  LISTs.py  L_EQUAL.json  L_EQUAL_B2B.json  L_UNEQUAL.json  L_UNEQUAL_B2B.json  PFC.json  TABLES.db  UB.json  UC.json  WELDS.json  __init__.py
src/steelsnakes/US/: __init__.py  angles.py  beams.py  channels.py  database.py  factory.py  hollow.py  piles.py  pipes.py  properties.jsonc
src/steelsnakes/US/checks/: __init__.py  classification.py  lrfd.py
src/steelsnakes/US/data/: 2L.json  C.json  HP.json  HSS.json  HSS_RCT.json  HSS_RND.json  HSS_SQR.json  L.json  L2L.json  L2L_EQUAL.json  L2L_LLBB.json  L2L_SLBB.json  L_EQUAL.json  L_UNEQUAL.json  M.json  MC.json  MT.json  PIPE.json  S.json  SECTIONS.md  ST.json  W.json  WT.json
src/steelsnakes/US_Metric/: __init__.py  angles.py  beams.py  channels.py  database.py  factory.py  hollow.py  piles.py  pipes.py  tees.py
src/steelsnakes/US_Metric/data/: C.json  HP.json  HSS.json  HSS_RCT.json  HSS_RND.json  HSS_SQR.json  L.json  L2L.json  L2L_EQUAL.json  L2L_LLBB.json  L2L_SLBB.json  L_EQUAL.json  L_UNEQUAL.json  M.json  MC.json  MT.json  PIPE.json  S.json  ST.json  W.json  WT.json
src/steelsnakes/base/: 0.3.0.md  __init__.py  adapter.py  checks.py  connectors.py  database.py  exceptions.py  factory.py  materials.py  polars_search.py  sections.py  sqlite3db.py  sqlite_driver.py
src/steelsnakes/core/sections/: __init__.py
src/steelsnakes/data/: .gitignore  SCHEMA.SQL  __init__.py  sqlite_driver.py
src/steelsnakes/engine/: __init__.py
src/steelsnakes/engine/analysis/: __init__.py
tests/: test_UK_module.py  test_adapter.py  test_base.py  test_database.py  test_factory.py  test_fuzzy_matching.py  test_main.py  test_sections.py  test_uk_module.py
(+30 files in other folders)
