[project]
name = "steelsnakes"
version = "0.0.1-alpha-3"
description = "Structural steel for Python."
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-2.0 " # https://packaging.python.org/en/latest/glossary/#term-SPDX-Expression
license-files = ["LICENSE.md"]
authors = [{ name = "Wayne Maranga", email = "waynemaranga@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "coverage==7.10.0",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-shadcn>=0.9.0",
    "mkdocstrings[python]>=0.30.0",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
steelsnakes = "steelsnakes:main"
steelsnakes-db = "steelsnakes.cli:main"

[project.urls]
homepage = "https://github.com/waynemaranga/steelsnakes"
issues = "https://github.com/waynemaranga/steelsnakes/issues"
documentation = "https://steelsnakes.readthedocs.io/en/latest/"
discussions = "https://github.com/waynemaranga/steelsnakes/discussions"

# classifiers = [
#     "Programming Language :: Python :: 3",
#     "Operating System :: OS Independent",
# ]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
ignore = [
    "F401", # Module imported but unused
    "F841", # Local variable name is assigned to but never used
    "E741", # Ambiguous variable name 'l'
    # "E742",  # Ambiguous class name 'l'
    # "E743"   # Ambiguous function name 'l'
]
