[project]
name = "steelsnakes"
version = "0.0.1-alpha-6"
description = "A python library for structural steel."
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-2.0 " # https://packaging.python.org/en/latest/glossary/#term-SPDX-Expression
license-files = ["LICENSE.md"]
authors = [{ name = "Wayne Maranga", email = "waynemaranga@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
    "coverage==7.10.0",
    "mkdocs>=1.6.1",
    "mkdocs-shadcn>=0.9.0",
    "mkdocstrings[python]>=0.30.0",
    "pydantic>=2.11.7",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "sqlalchemy>=2.0.43",
]

# [project.optional-dependencies]
# extras = [
#     # Extra features:
#     # - ui using streamlit and/or fastapi
#     # - cli using typer/click/argparse, maybe even a tui
#     # - built-in sqlite with fastapi's sqlmodels (from tiangolo: https://sqlmodel.tiangolo.com/tutorial/)
#     # - probably: sqlite binary: pysqlite3-binary - since in advanced implementations, the speed of sqlite matters
#     # - TODO: switch to sqlite for engineering calcs/lookups/ etc...

# ]
# dev = [
#     # Standard package + extras
#     # "steelsnakes[extras]", # ... only if extras has been implemented, otherwise no.
#     # ...plus...
#     # - testing: pytest, pytest-cov, coverage
#     # - documentation: mkdocs, mkdocs-shadcn, mkdocstrings, pymdown-extensions
# ]


[project.scripts]
steelsnakes = "steelsnakes:main"
# steelsnakes-db = "steelsnakes.cli:main" # TODO: maybe later

[project.urls]
homepage = "https://github.com/waynemaranga/steelsnakes"
issues = "https://github.com/waynemaranga/steelsnakes/issues"
documentation = "https://steelsnakes.readthedocs.io/en/latest/"
discussions = "https://github.com/waynemaranga/steelsnakes/discussions"

# classifiers = [
#     "Programming Language :: Python :: 3",
#     "Operating System :: OS Independent",
# ]

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
ignore = [
    "F401", # Module imported but unused
    "F841", # Local variable name is assigned to but never used
    "E741", # Ambiguous variable name 'l'
    # "E742",  # Ambiguous class name 'l'
    # "E743"   # Ambiguous function name 'l'
]
